MarcoKitTests/TestData/error/array1.marco
--before
[

--after
1: Unexpected end of file

[ğŸ’¥
